--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   go_router: ^15.1.1
   flutter_dotenv: ^5.2.1
   dio: ^5.8.0+1
+  flutter_riverpod: ^2.6.1
+  
 
 dev_dependencies:
   flutter_test:
